# roman_simulate_dr

./: README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
roman_data_release/scripts/: generate_input_catalog.py  generate_simulated_images.py  obs_plan.toml  obs_plan_single_exposure.toml  utils.py
roman_simulate_dr/scripts/: generate_input_catalog.py  generate_simulated_images.py  generate_simulated_l1_images.py  logger.py  obs_plan.ecsv  obs_plan.toml  utils.py
roman_simulate_dr/tests/: conftest.py  test_generate_input_catalog.py  test_generate_simulated_images.py  test_utils.py
