[project]
name = "roman_simulate_dr"
description = "Library of data release related tools for the Roman Space Telescope."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Roman calibration pipeline developers", email = "help@stsci.edu" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "romanisim @ git+https://github.com/spacetelescope/romanisim.git@main",
    "astropy",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-astropy",
    "sphinx-automodapi",
    "sphinx-rtd-theme",
    "stsci-rtd-theme",
    "sphinx-autobuild",
]

[project.urls]
tracker = "https://github.com/mairanteodoro/roman_simulate_dr/issues"
documentation = "https://roman-data-release.readthedocs.io/en/stable/"
repository = "https://github.com/mairanteodoro/roman_simulate_dr"

[project.scripts]
rdr_generate_input_catalog = "roman_simulate_dr.scripts.generate_input_catalog:_cli"
rdr_generate_simulated_images = "roman_simulate_dr.scripts.generate_simulated_images:_cli"

[build-system]
requires = [
    "setuptools >=60",
    "setuptools_scm[toml] >=3.4",
    "wheel",
]
build-backend = "setuptools.build_meta"


[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
include = ["roman_simulate_dr*"]

[tool.setuptools.package-data]
# package_data values are glob patterns relative to each specific subpackage.
"*" = [
    "**/*.fits",
    "**/*.txt",
    "**/*.inc",
    "**/*.cfg",
    "**/*.csv",
    "**/*.yaml",
    "**/*.json",
    "**/*.asdf",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = [
    "UP",   # pyupgrade
    "I",    # isort
    "B",    # bugbear
    "S",    # bandit
    "RUF",  # ruff specific
    "NPY",  # numpy lint
]
exclude = [
    "jdocs",
    ".tox",
    ".eggs",
    "build",
]
ignore = [
    "E741", # ambiguous variable name
    "S101", # use of assert detected
]

[tool.cibuildwheel.macos]
archs = [
    "x86_64",
    "arm64",
]

[tool.cibuildwheel.linux]
archs = [
    "auto",
    "aarch64",
]

[tool.towncrier]
filename = "CHANGES.rst"
directory = "changes"
package = "roman_simulate_dr"
title_format = "{version} ({project_date})"
ignore = [".gitkeep"]
wrap = true
issue_format = "`#{issue} <https://github.com/mairanteodoro/roman_simulate_dr/issues/{issue}>`_"

[[tool.towncrier.type]]
directory = "general"
name = "General"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Documentation"
showcontent = true

